# xgc2-gazebo-sim-camera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci.yml  release.yml
.xgc2/: product.yml
.xgc2/scripts/: build_debs_in_docker.sh  check_installed_packages.sh  check_package_compliance.sh  package_debs.sh  xgc2_artifact_manifest.py
config/: extrinsic_markers_vrpn.yaml  world_camera_profiles.yaml
launch/: camera_ar_rviz.launch  extrinsic_calibration_world.launch  extrinsic_markers.launch  intrinsic_calibration_world.launch  static_camera.launch  web_calibration.launch
models/usb_cam/: model.config  model.sdf
process-definitions/: gazebo-static-camera-0.3.0.json  gazebo-static-camera-0.4.0.json  gazebo-static-camera-0.6.0.json  gazebo-static-camera.json
rviz/: camera_ar.rviz
scripts/: camera_contract_test.py  camera_lifecycle_keepalive.py  drive_intrinsic_calibration.py  keyboard_camera_teleop.py  web_calibration.py
src/: xgc_media_camera_plugin.cpp
test/: static_camera_contract.test  static_product_contract.py  test_intrinsic_sweep.py  test_keyboard_camera_teleop.py  test_web_calibration.py  test_world_camera_profiles.py
urdf/: calibration_marker.urdf.xacro  checkerboard_8x6.urdf.xacro  fixed_rgb_camera.urdf.xacro
web/: app.js  index.html  style.css
worlds/: calibration.world  empty.world
