<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sim_camera</name>
  <version>0.1.0</version>
  <description>Independent fixed-site RGB camera and calibration scenes for Gazebo Classic.</description>
  <maintainer email="dev@xiaokang.ink">XGC2</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>xacro</depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_sim_vrpn_bridge</exec_depend>
  <test_depend>rostest</test_depend>

  <export/>
</package>
