<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sim_camera</name>
  <version>0.1.0</version>
  <description>Independent fixed-site RGB camera and calibration scenes for Gazebo Classic.</description>
  <maintainer email="dev@xiaokang.ink">XGC2</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>camera_calibration</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_sim_vrpn_bridge</exec_depend>
  <exec_depend>gazebo_sim_worlds</exec_depend>
  <test_depend>rostest</test_depend>
  <test_depend>python3-nose</test_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
