<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sim_camera</name>
  <version>1.0.0</version>
  <description>Independent fixed-site GPU-rendered H264 camera source and calibration scenes for Gazebo Classic.</description>
  <maintainer email="dev@xiaokang.ink">XGC2</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>libffmpeg-nvenc-dev</build_depend>
  <build_depend>libjpeg-dev</build_depend>
  <build_depend>libgl1-mesa-dev</build_depend>
  <build_depend>libglew-dev</build_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>camera_calibration</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_sim_vrpn_bridge</exec_depend>
  <exec_depend>gazebo_sim_worlds</exec_depend>
  <exec_depend>libnvidia-encode1</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>rostest</test_depend>
  <test_depend>python3-nose</test_depend>

</package>
